working on the navbar component

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,11 @@
     <link href="./output.css" rel="stylesheet">
     <title>Document</title>
 </head>
-<body>
-    
+<body class="bg-[#04070b]">
+   <!-- Navbar -->
+  <div id="navbar"></div>
+
 </body>
+<script src="./js/components.js"></script>
+<script src="./js/main.js"></script>
 </html>
