Navbar component with dark/light mode completed

--- a/src/contact.html
+++ b/src/contact.html
@@ -1,12 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link href="./output.css" rel="stylesheet">
-    <title>Document</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="./output.css" rel="stylesheet">
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class'
+    };
+  </script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+  <title>Contact</title>
 </head>
-<body>
-    
+<body class="bg-white dark:bg-black text-black dark:text-white transition-colors duration-300">
+  <div id="navbar"></div>
+
+<script src="./js/components.js"></script>
+<script src="./js/main.js"></script>
 </body>
 </html>
