--- a/src/contact.html
+++ b/src/contact.html
@@ -15,7 +15,7 @@
 </head>
 <body class="bg-white dark:bg-black text-black dark:text-white transition-colors duration-300">
   <div id="navbar"></div>
-
+  <div id="footer"></div>
 <script src="./js/components.js"></script>
 <script src="./js/main.js"></script>
 </body>
