--- a/src/about.html
+++ b/src/about.html
@@ -13,7 +13,7 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <title>About</title>
 </head>
-<body class="bg-white dark:bg-black text-black dark:text-white transition-colors duration-300">
+<body class="bg-white dark:bg-[#04060b] text-black dark:text-white transition-colors duration-300">
   <div id="navbar"></div>
   <div id="footer"></div>
 <script src="./js/components.js"></script>
