updating the footer and navbar components and index.html and main.js

--- a/src/index.html
+++ b/src/index.html
@@ -1,23 +1,50 @@
-<!DOCTYPE html >
+<!DOCTYPE html>
 <html lang="en">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link href="./output.css" rel="stylesheet">
   <script src="https://cdn.tailwindcss.com"></script>
+  <!-- AOS CSS -->
+  <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
   <script>
     tailwind.config = {
-      darkMode: 'class'
+      darkMode: 'class',
+      theme: {
+        extend: {
+          keyframes: {
+            float: {
+              '0%, 100%': { transform: 'translateY(20px)' },
+              '50%': { transform: 'translateY(-20px)' },
+            }
+          },
+          animation: {
+            float: 'float 3s ease-in-out infinite',
+          }
+        }
+      }
     };
   </script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
   <title>HOME</title>
 </head>
-<body class="bg-white dark:bg-[#04060b] text-black dark:text-white transition-colors duration-300">
+<body class="bg-white dark:bg-[#04060b] text-black dark:text-white transition-colors duration-200">
   <div id="navbar"></div>
-  <div id="footer"></div>
+  
+  <div id="hero-section" data-aos="fade-right" data-aos-delay="100" data-aos-duration="1000"></div>
+
+  <div id="footer" data-aos="fade-up" data-aos-delay="100" data-aos-duration="800"></div>
+  
   <script src="./js/components.js"></script>
   <script src="./js/main.js"></script>
+  <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+  <script>
+    AOS.init({
+      offset: 120,
+      duration: 800,
+      easing: 'ease-in-out',
+      once: true,
+    });
+  </script>
 </body>
-
 </html>
