--- a/src/services.html
+++ b/src/services.html
@@ -1,22 +1,51 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link href="./output.css" rel="stylesheet">
-  <script src="https://cdn.tailwindcss.com"></script>
-  <script>
-    tailwind.config = {
-      darkMode: 'class'
-    };
-  </script>
-  <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-  <title>Services</title>
-</head>
-<body class="bg-white dark:bg-[#04060b] text-black dark:text-white transition-colors duration-300">
-  <div id="navbar"></div>
-  <div id="footer"></div>
-<script src="./js/components.js"></script>
-<script src="./js/main.js"></script>
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link href="./output.css" rel="stylesheet" />
+    <script src="https://cdn.tailwindcss.com"></script>
+    <!-- AOS CSS -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
+    <script>
+      tailwind.config = {
+        darkMode: "class",
+      };
+    </script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
+    <title>Services</title>
+  </head>
+  <body
+    class="bg-white dark:bg-[#04060b] text-black dark:text-white transition-colors duration-300 overflow-x-hidden"
+  >
+    <div id="navbar"></div>
+    <section
+      class="flex flex-col items-center md:py-20 border border-gray-200 dark:border-gray-800"
+      data-aos="fade-left"
+      data-aos-delay="100"
+      data-aos-duration="800"
+    >
+      <h1 class="text-3xl sm:text-5xl font-bold pt-5 mt-0 sm:py-3">
+        Our
+        <span class="text-[#70E4AA] font-extrabold">Services</span>
+      </h1>
+      <div
+        id="services-container"
+        class="grid grid-cols-1 md:grid-cols-3 gap-6 m-5 sm:mt-10"
+      ></div>
+    </section>
+    <div id="footer"></div>
+    <script src="./js/data.js"></script>
+    <script src="./js/components.js"></script>
+    <script src="./js/main.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+      AOS.init({
+        offset: 120,
+        duration: 800,
+        easing: "ease-in-out",
+        once: true,
+      });
+    </script>
+  </body>
 </html>
