Update some files

--- a/src/projects.html
+++ b/src/projects.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link href="./output.css" rel="stylesheet" />
     <script src="https://cdn.tailwindcss.com"></script>
+    <!-- favicon -->
+    <link rel="icon" type="image/png" href="./assets/favicon.png" />
     <!-- AOS CSS -->
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet" />
     <script>
@@ -13,7 +15,7 @@
       };
     </script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/3.2.1/anime.min.js"></script>
-    <title>Projects</title>
+    <title>Our Projects | Innovation Studio – Creative Portfolio</title>
   </head>
   <body
     class="bg-white dark:bg-[#04060b] text-black dark:text-white transition-colors duration-300 overflow-x-hidden"
@@ -21,7 +23,7 @@
     <div id="navbar"></div>
     <section
       class="flex flex-col items-center md:py-20 border border-gray-200 dark:border-gray-800"
-      data-aos="fade-left"
+      data-aos="fade-up"
       data-aos-delay="100"
       data-aos-duration="800"
     >
