--- a/src/about.html
+++ b/src/about.html
@@ -134,22 +134,22 @@
           class="bg-[#245053] dark:bg-[#07161f] p-6 rounded-2xl shadow-lg text-center transform transition sm:hover:scale-105"
         >
           <img
-            src="./assets/aboutIMG/rumesa.jpeg"
+            src="https://previews.123rf.com/images/archivector/archivector1902/archivector190200317/117964202-abstract-sign-avatar-men-icon-male-profile-white-symbol-on-gray-circle-background-vector.jpg"
             alt=""
             class="w-32 h-32 mx-auto rounded-full"
           />
-          <h3 class="mt-4 text-xl text-white font-bold">Rumesa Khalid</h3>
+          <h3 class="mt-4 text-xl text-white font-bold">Mark Cuban</h3>
           <p class="text-[#70E4AA] font-semibold">Founder & CEO</p>
           <div class="flex justify-center gap-4 mt-4">
             <a
-              href="https://www.linkedin.com/in/rumesa-khalid-ba1398258/"
+              href="https://www.linkedin.com/"
               target="_blank"
               class="text-white hover:text-[#70E4AA]"
             >
               <i data-lucide="linkedin" class="w-5 h-5"></i>
             </a>
             <a
-              href="https://www.behance.net/rumesakhalid"
+              href="https://www.behance.net/"
               target="_blank"
               class="text-white hover:text-[#70E4AA]"
             >
